--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    compileOnly("org.springframework.boot:spring-boot-starter-aop")
+
+    // for LoggingEventCompositeJsonEncoder
+    compileOnly('net.logstash.logback:logstash-logback-encoder:6.1')
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation(implementation 'org.aspectj:aspectjweaver:1.9.7')
+
 }
 
 tasks.named('test') {
